# assistant-platform

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-base-image.yml
contracts/: assistant-agent-graph.md  assistant-agent-protocol.md  assistant-approvals.md  assistant-capabilities.md  assistant-channel-cli.md  assistant-channel-slack.md  assistant-channel-telegram.md  assistant-cli.md  assistant-config.md  assistant-core.md  assistant-db.md  assistant-host.md  assistant-memory.md  assistant-permissions.md  assistant-router.md  assistant-runtime-docker.md  assistant-scheduler.md  assistant-session.md  assistant-setup.md  assistant-specialist-spec.md  assistant-upgrade.md  assistant-web.md  claw-agent-graph.md  claw-agent-protocol.md  claw-approvals.md  claw-capabilities.md  claw-channel-cli.md  claw-channel-slack.md  claw-channel-telegram.md  claw-cli.md  claw-config.md  claw-core.md  claw-db.md  claw-host.md  claw-memory.md  claw-permissions.md  claw-router.md  claw-runtime-docker.md  claw-scheduler.md  claw-session.md  (+5 more)
crates/assistant-agent-graph/: Cargo.toml
crates/assistant-agent-graph/src/: audit.rs  delegation.rs  lib.rs  routing.rs  store.rs
crates/assistant-agent-graph/tests/: delegation.rs
crates/assistant-agent-protocol/: Cargo.toml
crates/assistant-agent-protocol/src/: action.rs  fragment.rs  lib.rs  manifest.rs  protocol.rs  provider.rs  runner.rs
crates/assistant-agent-protocol/tests/: runner_loop.rs
crates/assistant-approvals/: Cargo.toml
crates/assistant-approvals/src/: event.rs  fragment.rs  lib.rs  model.rs  store.rs
crates/assistant-capabilities/: Cargo.toml
crates/assistant-capabilities/src/: event.rs  lib.rs  readiness.rs  registry.rs
crates/assistant-channel-cli/: Cargo.toml
crates/assistant-channel-cli/src/: lib.rs
crates/assistant-channel-cli/tests/: loop.rs
crates/assistant-channel-slack/: Cargo.toml
crates/assistant-channel-slack/src/: adapter.rs  event.rs  lib.rs  mrkdwn.rs  socket.rs
crates/assistant-channel-telegram/: Cargo.toml
crates/assistant-channel-telegram/src/: event.rs  format.rs  lib.rs  readiness.rs
crates/assistant-cli/: Cargo.toml
crates/assistant-cli/src/: bridge.rs  lib.rs  output.rs  readiness.rs
crates/assistant-cli/tests/: bridge_e2e.rs  personal_vertical_e2e.rs  safety_scenarios_e2e.rs  setup_e2e.rs  upgrade_e2e.rs  work_vertical_e2e.rs
crates/assistant-cli/tests/harness/: mod.rs
crates/assistant-config/: Cargo.toml
crates/assistant-core/: Cargo.toml
crates/assistant-host/: Cargo.toml
crates/assistant-host/src/: admin.rs  delegation.rs  error.rs  lib.rs  memory.rs  onecli.rs  qmd.rs  run.rs  scheduler.rs  setup_steps.rs  slack.rs
crates/assistant-host/src/web/: app.rs  listener.rs  mod.rs  serve.rs
crates/assistant-host/tests/: run_loop.rs  serve_slack.rs  shim_conformance.rs
crates/assistant-memory/: Cargo.toml
crates/assistant-memory/src/: catalog.rs  entry.rs  health.rs  lib.rs  qmd.rs  rag.rs  reindex.rs  root.rs  taxonomy.rs
crates/assistant-product/: Cargo.toml
crates/assistant-product/src/: lib.rs
crates/assistant-runtime-docker/: Cargo.toml
crates/assistant-runtime-docker/src/: auth.rs  image.rs  lib.rs  lifecycle.rs  mount.rs  readiness.rs  runtime_real.rs
crates/assistant-upgrade/: Cargo.toml
crates/assistant-upgrade/src/: error.rs  inventory.rs  lib.rs  matrix.rs  runner.rs
crates/assistant-web/: Cargo.toml
crates/assistant-web/src/: auth.rs  http.rs  lib.rs  memoryfs.rs  pages.rs  server.rs  ui.rs  ui_memory.rs
crates/claw-agent-graph/: Cargo.toml
crates/claw-agent-graph/src/: delegation.rs  handoff.rs  job.rs  lib.rs  readiness.rs  registry.rs  routing.rs  store.rs
crates/claw-agent-graph/tests/: delegation.rs
crates/claw-agent-protocol/: Cargo.toml
crates/claw-agent-protocol/src/: action.rs  envelope.rs  fallback.rs  fragment.rs  lib.rs  process.rs  protocol.rs  runner.rs
crates/claw-agent-protocol/tests/: runner_loop.rs
crates/claw-capabilities/: Cargo.toml
crates/claw-capabilities/src/: event.rs  lib.rs  readiness.rs  registry.rs
crates/claw-channel-cli/: Cargo.toml
crates/claw-channel-cli/src/: lib.rs
crates/claw-channel-cli/tests/: loop.rs
crates/claw-channel-telegram/: Cargo.toml
crates/claw-channel-telegram/src/: event.rs  format.rs  lib.rs  readiness.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: access.rs  bridge.rs  command.rs  lib.rs  output.rs  readiness.rs  registry.rs
crates/claw-cli/tests/: bridge_e2e.rs  personal_vertical_e2e.rs  safety_scenarios_e2e.rs  setup_e2e.rs  upgrade_e2e.rs  work_vertical_e2e.rs
crates/claw-cli/tests/harness/: mod.rs
crates/claw-core/: Cargo.toml
crates/claw-host/: Cargo.toml
crates/claw-host/src/: admin.rs  delegation.rs  error.rs  lib.rs  memory.rs  onecli.rs  qmd.rs  run.rs  scheduler.rs  setup_steps.rs  signal.rs  slack.rs
crates/claw-host/tests/: run_loop.rs  serve_slack.rs  shim_conformance.rs
crates/claw-permissions/: Cargo.toml
crates/claw-permissions/src/: access.rs  event.rs  lib.rs  readiness.rs  standing.rs  store.rs
crates/claw-runtime-docker/: Cargo.toml
crates/claw-runtime-docker/src/: auth.rs  error.rs  image.rs  lib.rs  lifecycle.rs  mount.rs  readiness.rs  runtime_real.rs
crates/claw-scheduler/: Cargo.toml
crates/claw-scheduler/src/: event.rs  fragment.rs  lease.rs  lib.rs  model.rs  projection.rs  readiness.rs  repair.rs
crates/claw-session/: Cargo.toml
crates/claw-session/src/: attachment.rs  control.rs  db.rs  error.rs  lib.rs  migrate.rs  recovery.rs  schema.rs
crates/claw-session/tests/: protocol.rs
crates/claw-setup/: Cargo.toml
crates/claw-setup/src/: bootstrap.rs  error.rs  lib.rs  pipeline.rs  readiness.rs  state.rs  support.rs
crates/claw-setup/tests/: bootstrap.rs
crates/claw-upgrade/: Cargo.toml
crates/claw-upgrade/src/: error.rs  inventory.rs  lib.rs  matrix.rs  runner.rs
docs/: instance-enablement.md  product-maintenance.md
host-rag/: package-lock.json  package.json  qmd-sidecar.mjs
manifests/: platform.toml  prompt-fragments.toml
shim/: Dockerfile  package-lock.json  package.json
(+112 files in other folders)
