[workspace]
members = [
  "crates/assistant-agent-graph",
  "crates/assistant-agent-protocol",
  "crates/assistant-approvals",
  "crates/assistant-capabilities",
  "crates/assistant-channel-cli",
  "crates/assistant-channel-slack",
  "crates/assistant-channel-telegram",
  "crates/assistant-cli",
  "crates/assistant-config",
  "crates/assistant-core",
  "crates/assistant-db",
  "crates/assistant-host",
  "crates/assistant-memory",
  "crates/assistant-permissions",
  "crates/assistant-product",
  "crates/assistant-router",
  "crates/assistant-runtime-docker",
  "crates/assistant-scheduler",
  "crates/assistant-session",
  "crates/assistant-setup",
  "crates/assistant-specialist-spec",
  "crates/assistant-upgrade",
  "crates/assistant-web",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

