[package]
name = "assistant-approvals"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
assistant-db = { path = "../assistant-db" }
assistant-permissions = { path = "../assistant-permissions" }
rusqlite = "0.32.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"

