[package]
name = "assistant-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
assistant-core = { path = "../assistant-core" }
assistant-config = { path = "../assistant-config" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"

