[package]
name = "assistant-channel-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
assistant-router = { path = "../assistant-router" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Inbound Socket Mode transport (blocking websocket). Optional + non-default so
# the offline gate for the rest of the workspace is unchanged unless this
# feature is on — mirrors how `real-docker` gates the real Docker runtime.
tungstenite = { version = "0.29", optional = true, features = ["rustls-tls-native-roots"] }
# tungstenite pulls rustls 0.23 with no crypto provider; rustls then refuses to
# pick one at runtime. Wire `ring` (no C toolchain) directly so it is the single
# compiled provider and can be installed explicitly before the first connect.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }

[features]
# Build the blocking Slack Socket Mode inbound listener.
socket-mode = ["dep:tungstenite", "dep:rustls"]

