[package]
name = "assistant-channel-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
assistant-router = { path = "../assistant-router" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

