[package]
name = "assistant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../assistant-core" }
assistant-config = { path = "../assistant-config" }
assistant-db = { path = "../assistant-db" }
assistant-session = { path = "../assistant-session" }
assistant-setup = { path = "../assistant-setup" }
assistant-upgrade = { path = "../assistant-upgrade" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assistant-router = { path = "../assistant-router" }
assistant-permissions = { path = "../assistant-permissions" }
assistant-memory = { path = "../assistant-memory" }
assistant-scheduler = { path = "../assistant-scheduler" }
assistant-agent-graph = { path = "../assistant-agent-graph" }
# Test-only: the bootstrap harness drives a real browser delegation to exercise
# the seam. The browser specialist now lives in its own sibling repo.
assistant-specialist-browser = { path = "../../../assistant-specialist-browser" }
assistant-runtime-docker = { path = "../assistant-runtime-docker" }
assistant-web = { path = "../assistant-web" }
assistant-channel-telegram = { path = "../assistant-channel-telegram" }
assistant-channel-slack = { path = "../assistant-channel-slack" }
assistant-capabilities = { path = "../assistant-capabilities" }
rusqlite = "0.32.1"
tempfile = "3.27.0"

