[package]
name = "assistant-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
assistant-db = { path = "../assistant-db" }
rusqlite = "0.32.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
