[package]
name = "assistant-runtime-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Off by default so `cargo build/test --offline` and conformance never shell out
# to Docker. The host (assistant-host) enables this to get the real CLI-backed runtime.
real-docker = []

[dependencies]
assistant-core = { path = "../assistant-core" }
assistant-config = { path = "../assistant-config" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
