[package]
name = "claw-agent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
claw-core = { path = "../claw-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
claw-session = { path = "../claw-session" }
tempfile = "3.27.0"
