[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
claw-core = { path = "../claw-core" }
claw-config = { path = "../claw-config" }
claw-db = { path = "../claw-db" }
claw-session = { path = "../claw-session" }
claw-setup = { path = "../claw-setup" }
claw-upgrade = { path = "../claw-upgrade" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
claw-router = { path = "../claw-router" }
claw-permissions = { path = "../claw-permissions" }
claw-memory = { path = "../claw-memory" }
claw-scheduler = { path = "../claw-scheduler" }
claw-agent-graph = { path = "../claw-agent-graph" }
# Test-only: the bootstrap harness drives a real browser delegation to exercise
# the seam. The browser specialist now lives in its own sibling repo.
claw-specialist-browser = { path = "../../../claw-specialist-browser" }
claw-runtime-docker = { path = "../claw-runtime-docker" }
claw-web = { path = "../claw-web" }
claw-channel-telegram = { path = "../claw-channel-telegram" }
claw-channel-slack = { path = "../claw-channel-slack" }
claw-capabilities = { path = "../claw-capabilities" }
rusqlite = "0.32.1"
tempfile = "3.27.0"

