[package]
name = "claw-runtime-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Off by default so `cargo build/test --offline` and conformance never shell out
# to Docker. The host (claw-host) enables this to get the real CLI-backed runtime.
real-docker = []

[dependencies]
claw-core = { path = "../claw-core" }
claw-config = { path = "../claw-config" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
