[package]
name = "claw-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
claw-db = { path = "../claw-db" }
claw-session = { path = "../claw-session" }
rusqlite = "0.32.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"

[lib]
path = "src/lib.rs"

